# cheer-up-bot

./: .gitignore  Cargo.toml  README.md
cheer-up/: .exampleenv  .gitignore  Cargo.toml  Makefile  README.md
cheer-up-api/: .exampleenv  Cargo.toml  Makefile
cheer-up-api/migrations/: 01_setup.sql  02_locales.sql  02_users.sql  03_notes.sql  03_users.sql  04_notes.sql
cheer-up-api/src/: config.rs  lib.rs  main.rs
cheer-up-api/src/http/: error.rs  http.rs  locale.rs  mod.rs  notes.rs  stats.rs  users.rs
cheer-up-core/: Cargo.toml
cheer-up-manager/: .exampleenv  .gitignore  Cargo.toml  Makefile  README.md
cheer-up-manager/locales/: en.yml  es.yml  ua.yml
cheer-up-manager/src/: buttons.rs  callbacks.rs  commands.rs  keyboards.rs  main.rs  messages.rs  templates.rs  user.rs  utils.rs  videonotes.rs
cheer-up/locales/: en.yml  es.yml  it.yml  ua.yml
cheer-up/src/: buttons.rs  callbacks.rs  commands.rs  keyboards.rs  locale.rs  main.rs  messages.rs  stats.rs  templates.rs  user.rs  utils.rs  videonotes.rs
