[package]
name = "cheer-up-api"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
async-trait = "0.1.77"
axum = "0.7.4"
dotenvy = "0.15.7"
log = { version = "0.4.21", features = ["serde", "std"] }
pretty_env_logger = "0.5.0"
serde = "1.0.197"
sqlx = { version = "0.7.3", features = ["sqlite", "time", "runtime-tokio"] }
thiserror = "1.0.57"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
