[package]
name = "cheer-up"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.26", features = [
  "json",
  "multipart",
  "serde_json",
] }
rust-i18n = "3.0.1"
serde = "1.0.197"
serde_json = "1.0.114"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
